2014-05-19  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_context_scripts): add contextjit, mtxrunjit.
	Remove ctxtools and pstopdf, which are not to be user-level
	executables any more even though they remain in stubs, per Hans.

2013-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32], ../w32_wrapper/context/mtxrun.{dll,exe}:
	Update ConTeXt wrappers (from Hans).

2013-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Install runscript.* and ConTeXt wrappers.

2013-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Install arara.exe wrapper.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (texmf_scriptsdir): Change texmf => texmf-dist.
	Change man dir link accordingly.

2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Install {rungs,tlmgr}.exe wrappers.

2012-09-09  Karl Berry  <karl@tug.org>

	* Makefile.am (echo-shell-scripts): new target for
	check-wrapper-consistency.

2012-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (installdirs-local): Make sure $(bindir) exists.

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fmtutil*, tcfmgr*, texconfig*, texlinks* (new): Moved from
	../../tetex/ to ./tetex/.
	* Makefile.am: Moved run-texlinks rule from /../tetex/ to here.

2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* updmap.help2man, tetex/all*, tetex/dvi2fax*, tetex/dvired*,
	tetex/fontinst*, tetex/kpsetool*, tetex/kpsewhere*,
	tetex/ps2frag*, tetex/pslatex*, tetex/rubibtex*,
	tetex/rumakeindex*, tetex/updmap* (new): Moved from ../../tetex/
	to here.
	* Makefile.am: Added man1_links and rule for xupdmap.1.

2012-08-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (texmf_*_scripts): Move a2ping/, simpdftex/,
	tetex/, and texdoc/ scripts from texmf/ to texmf-dist/.

	* tetex/{e2pall,texdoctk}.1, thumbpdf/thumbpdf.1 (new):
	Moved from ../../tetex/{e2pall,texdoctk,thumbpdf}.man to here.