@@ -1,3 +1,7 @@
+2014-07-18  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (bin_links): mkluatexfontdb gone.
+
 2014-05-19  Karl Berry  <karl@tug.org>
 
 	* Makefile.am (texmf_context_scripts): add contextjit, mtxrunjit.
